--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "lint": "tslint --project \"./tsconfig.json\"",
-    "roll-it-up": "rollup --config",
+    "roll-it-up": "rm -rf dist && rollup --config",
     "run-bundle": "node run-bundle.js"
   },
   "author": "shawn nolan",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "chai": "^5.1.1",
+    "mocha": "^10.7.0",
     "tslint": "^6.1.3",
     "typescript": "^5.4.5"
   },
@@ -21,7 +23,10 @@
     "algoliasearch": "^4.24.0",
     "dotenv": "^16.4.5"
   },
-  "keywords": ["algolia", "rollupjs"],
+  "keywords": [
+    "algolia",
+    "rollupjs"
+  ],
   "repository": {
     "url": "https://github.com/snolan-ethika/rollup-algolia"
   }
