--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:watch": "tsc --watch",
     "lint": "tslint --project \"./tsconfig.json\"",
     "roll-it-up": "rm -rf dist && rollup --config",
-    "run-bundle": "node run-bundle.mjs"
+    "test": "mocha"
   },
   "author": "shawn nolan",
   "license": "ISC",
